project/apps/network-policies/haproxy-controller/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: haproxy-controller-default-deny
  namespace: haproxy-controller
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
